--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "logger": "0.0.1",
     "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "^0.52.0",
-    "react-navigation": "^1.1.2"
+    "react-navigation": "^1.1.2",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
