--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "^0.52.0",
+    "react-native-form": "^2.1.2",
     "react-native-maps": "^0.20.1",
     "react-navigation": "^1.1.2",
     "react-redux": "^5.0.7",
