--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "art": "^0.10.1",
+    "d3": "^5.0.0",
+    "d3-shape": "^1.2.0",
     "expo": "^25.0.0",
     "logger": "0.0.1",
     "native-base": "^2.3.9",
