--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "art": "^0.10.1",
+    "auth0-js": "^9.4.2",
     "d3": "^5.0.0",
     "d3-shape": "^1.2.0",
     "expo": "^25.0.0",
