--- a/package.json
+++ b/package.json
@@ -20,21 +20,22 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "art": "^0.10.1",
-    "auth0-js": "^9.4.2",
-    "d3": "^5.0.0",
+    "art": "^0.10.2",
+    "auth0-js": "^9.5.0",
+    "d3": "^5.1.0",
     "d3-shape": "^1.2.0",
     "expo": "^25.0.0",
     "logger": "0.0.1",
-    "native-base": "^2.3.9",
+    "native-base": "^2.4.2",
     "react": "16.2.0",
-    "react-native": "^0.52.0",
-    "react-native-elements": "^0.19.0",
+    "react-native": "^0.52.3",
+    "react-native-elements": "^0.19.1",
     "react-native-form": "^2.1.2",
     "react-native-maps": "^0.20.1",
     "react-native-pie-chart": "^1.0.13",
+    "react-native-simple-dialogs": "^0.3.1",
     "react-native-svg-charts": "^4.2.0",
-    "react-navigation": "^1.1.2",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
